fixed alignment in technical

--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ body {
 
 .techsubheading {
   font-size: 1.3em;
+  text-align: center;
 }
 
 
